@@ -37,6 +37,7 @@ my ($iostat_pipe_r, $iostat_pipe_w);  # pipes for talking to iostat process
 my $opt_daemonize;
 my $opt_config;
 my $opt_iostat = 1;  # default to on now
+my $opt_fidsizes = 0;
 my $max_conns = 10000;
 my $http_listen = "0.0.0.0:7500";
 my $mgmt_listen = "0.0.0.0:7501";
@@ -46,6 +47,7 @@ my $server      = $ENV{MOGSTORED_SERVER_TYPE} || "perlbal";
 my $serverbin   = "";
 
 my %config_opts = (
+                   'fidsizes'      => \$opt_fidsizes,
                    'iostat'       => \$opt_iostat,
                    'daemonize|d'  => \$opt_daemonize,
                    'config=s'     => \$opt_config,
@@ -109,6 +111,7 @@ start_disk_usage_process();
 start_iostat_process() if $opt_iostat;
 harvest_dead_children();  # every 2 seconds, it reschedules itself
 setup_sidechannel_listener();
+start_fidsizes_worker() if $opt_fidsizes;
 
 # now start the main loop
 Perlbal::run();
@@ -171,6 +174,17 @@ sub harvest_dead_children {
     }
     Danga::Socket->AddTimer(2, \&harvest_dead_children);
 }
+
+sub start_fidsizes_worker {
+    die "Unable to create fidsizes worker: $@"
+        unless eval "use Gearman::Client::Async; 1";
+
+    local $ENV{MOG_DOCROOT} = Perlbal->service('mogstored')->{docroot};
+    my $exe = $selfexe;
+    $exe =~ s/mogstored$/mogstored-fidsizes/ or die "$0 not what we were expecting!";
+    Mogstored->gearman_server->start_worker($exe);
+}
+
 
 sub Mogstored::on_pid_death {
     my ($class, $pid, $code) = @_;
@@ -288,6 +302,30 @@ sub read_from_iostat_child {
         }
     }
 }
+
+my $gearman_server;
+
+sub Mogstored::gearman_server {
+    return $gearman_server if $gearman_server;
+
+    die "Unable to create gearman server: $@" unless
+        eval "use Gearman::Server; 1";
+
+    return $gearman_server = Gearman::Server->new;
+}
+
+my $gearman_client;
+
+sub Mogstored::gearman_client {
+    return $gearman_client if $gearman_client;
+
+    die "Unable to create gearman client: $@" unless
+        eval "use Gearman::Client::Async; 1";
+
+    return $gearman_client =
+        Gearman::Client::Async->new(job_servers => [ Mogstored::gearman_server() ]);
+}
+
 
 # Local Variables:
 # mode: perl
